--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,8 +1,10 @@
 
-@import "tailwindcss";
-@import "tw-animate-css";
+/*@import "tailwindcss";*/
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
-@custom-variant dark (&:is(.dark *));
+/*@custom-variant dark (&:is(.dark *));
 
 @theme inline {
   --radius-sm: calc(var(--radius) - 4px);
@@ -118,4 +120,4 @@
   body {
     @apply bg-background text-foreground;
   }
-}
+}*/
